Increased line-height in HighScoreCounter

--- a/src/game/components/HighScoreCounter.scss
+++ b/src/game/components/HighScoreCounter.scss
@@ -2,9 +2,12 @@
   margin-top: 30px;
 }
 
+.high_score_title {
+  line-height: 25px;
+}
+
 .high_score_count {
   font-size: 18px;
-  line-height: 25px;
   font-family: 'pcsenior', serif;
   text-transform: uppercase;
   text-align: center;
