--- a/src/game/components/Button.scss
+++ b/src/game/components/Button.scss
@@ -11,7 +11,7 @@
   display: inline-block;
   position: relative;
   font-size: 2em;
-  margin: 1vh;
+  margin: 1vh auto;
   outline: none !important;
   outline-offset: 0 !important;
 
