Fixed ios 14 bugs

--- a/src/game/components/SoundControls.scss
+++ b/src/game/components/SoundControls.scss
@@ -13,6 +13,7 @@
   margin: 1vh auto;
   outline: none !important;
   outline-offset: 0 !important;
+  padding: 0;
 
   &:active {
     background-color: red;
