--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@ body {
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
+  -webkit-user-select: none;
   -moz-osx-font-smoothing: grayscale;
+  touch-action: none;
 }
 
 code {
